--- a/app/index.html
+++ b/app/index.html
@@ -2,8 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="manifest" href="manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kanjidle</title>
+    <title>Kanjidle・漢字パズル</title>
+    <meta name="description" content="毎日更新漢字パズル" />
+    <!-- Facebook -->
+    <meta property="og:url" content="https://kanjidle.onecomp.one/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Kanjidle・漢字パズル" />
+    <meta property="og:description" content="毎日更新漢字パズル" />
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary" />
+    <meta property="twitter:domain" content="kanjidle.onecomp.one" />
+    <meta property="twitter:url" content="https://kanjidle.onecomp.one/" />
+    <meta name="twitter:title" content="Kanjidle・漢字パズル" />
+    <meta name="twitter:description" content="毎日更新漢字パズル" />
+    <!-- Icons -->
+    <link rel="icon" type="image/png" sizes="16x16" href="/icon16.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/icon32.png" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180" />
+    <meta name="theme-color" content="#cfcfcf" />
   </head>
   <body>
     <div id="root"></div>
